--- a/src/main/resources/templates/property/add.html
+++ b/src/main/resources/templates/property/add.html
@@ -51,7 +51,7 @@
 				<div class="form-group">
 					<label for="salePrice" class="col-sm-2 control-label">Prix de vente</label>
 					<div class="col-sm-10">
-						<input type="text" th:field="*{salePrice}" id="salePrice" placeholder="Prix de vente"
+						<input type="number" th:field="*{salePrice}" id="salePrice" placeholder="Prix de vente"
 							class="col-4">
 					</div>
 				</div>
