--- a/src/main/resources/templates/propertyAgent/add.html
+++ b/src/main/resources/templates/propertyAgent/add.html
@@ -7,22 +7,34 @@
 	<div th:replace="common.html :: #menu"></div>
 	<div class="container">
 		<div class="row">
-			<h2>Nouvel Attribution pour l'agent <span th:text="${agent.name}"></span></h2>
+			<h2>Nouvel assignation</h2>
 		</div>
 
 		<div class="row">
 			<form th:action="@{/property-agent/add}" th:object="${propertyAgent}" method="post" class="form-horizontal"
 				style="width: 100%">
 				<div class="form-group">
-					<label for="name" class="col-sm-2 control-label">Nom</label>
-					<div class="col-sm-10">
-						<input type="text" th:field="*{name}" id="name" placeholder="Nom" class="col-4">
+					<label for="property">Propriété</label>
+					<div>
+						<select class="form-select" th:field="*{property}" id="property">
+							<option th:each="property : ${properties}" th:value="${property.id}" th:text="${property.address}" />
+						</select>
+					</div>
+					</div>
+					
+					<div class="form-group">
+						<label for="agent">Agent</label>
+						<div>
+							<select class="form-select" th:field="*{agent}" id="agent">
+								<option th:each="agent : ${agents}" th:value="${agent.id}"
+									th:text="${agent.firstname}+ ' ' + ${agent.lastname}" />
+							</select>
 					</div>
 				</div>
 
 				<div class="form-group">
 					<div class="col-sm-12">
-						<a class="btn btn-danger btn-sm" href="@{/property-agent/{agentId}/list(agentId=${agent.id})}">Annuler</a>
+						<a class="btn btn-danger btn-sm" href="/property-agent/list/">Annuler</a>
 						<input class="btn btn-primary btn-sm" type="submit" value="Enregistrer">
 					</div>
 				</div>
